# 86Box

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  386_ref.cpp  AUTHORS  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EMM386.EX_  IO.SYS  Makefile  Makefile.in  README-DEDICATED-PC.txt  README-UNIX-MODE-WITH-OSD.txt  README.md  Readme-LINUX.txt  SECURITY.md  aclocal.m4  bumpversion.sh  configure  configure.ac  custex.cpp  readme.txt  sonar-project.properties  src_20180612.rar  test-voodoo-jit.sh  vcpkg.json  win_imgui.h
corrosion/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RELEASES.md
corrosion/.github/: FUNDING.yml
corrosion/cmake/: Corrosion.cmake  CorrosionConfig.cmake.in  CorrosionGenerator.cmake  FindRust.cmake
src/: 386.c  386.d  386.h  386.txt  386_common.d  386_common.h  386_common.txt  386_dynarec.c  386_dynarec.d  386_dynarec.txt  386_dynarec_ops.c  386_dynarec_ops.d  386_dynarec_ops.txt  386_ops.h  386_ops.txt  808x.c  808x.d  808x.txt  808x_tmp.txt  86Box.manifest  86Box.rc  86box.c  86box.cfg  86box.h  86box_io.h  Analog.d  BReverbModel.d  CMakeLists.txt  File.d  FileStream.d  H  LA32FloatWaveGenerator.d  LA32Ramp.d  LA32WaveGenerator.d  M  Makefile.am  Makefile.in  Makefile.local  Makefile.mingw  Makefile.mingw64  (+999 more)
src/CMakeModules/: FindD3D9.cmake  FindDirectDraw.cmake  FindDirectInput.cmake
src/CPU/: 386.c  386.h  386_common.h  386_dynarec.c  386_dynarec_ops.c  386_ops.h  808x.c  codegen.h  codegen_ops.c  codegen_ops.h  codegen_ops_arith.h  codegen_ops_jump.h  codegen_ops_misc.h  codegen_ops_shift.h  codegen_ops_x86-64.h  codegen_ops_x86.h  codegen_timing_486.c  codegen_timing_686.c  codegen_timing_common.h  codegen_timing_pentium.c  codegen_timing_winchip.c  codegen_x86-64.c  codegen_x86.c  cpu.c  cpu.h  x86.h  x86_flags.h  x86_ops.h  x86_ops_call.h  x86_ops_flag.h  x86_ops_i686.h  x86_ops_int.h  x86_ops_io.h  x86_ops_jump.h  x86_ops_misc.h  x86_ops_mmx_mov.h  x86_ops_mmx_shift.h  x86_ops_mov.h  x86_ops_prefix.h  x86_ops_rep.h  (+7 more)
src/HDD/: hdd.c  hdd_esdi_at.c  hdd_esdi_mca.c  hdd_ide_at.c  hdd_mfm_xebec.c
src/NETWORK/: bswap.h  net_ne2000.c  net_ne2000.h  net_pcap.c  net_slirp.c  network.c  network.h  pcap_if.c
src/SCSI/: scsi_bios_command.c  scsi_device.c  scsi_disk.c
src/SOUND/: dbopl.cpp  filters.h  midi.c  midi.h  midi_fluidsynth.c  midi_mt32.c  midi_mt32.h  midi_system.c  nukedopl.h  openal.c  snd_ad1848.c  snd_ad1848.h  snd_adlib.h  snd_adlibgold.c  snd_cms.c  snd_dbopl.cc  snd_dbopl.h  snd_emu8k.c  snd_emu8k.h  snd_gus.c  snd_mpu401.c  snd_mpu401.h  snd_mpu401_uart.c  snd_opl.c  snd_resid.h  snd_sb.c  snd_sb.h  snd_sb_dsp.c  snd_sb_dsp.h  snd_sn76489.c  snd_speaker.c  snd_ssi2001.h  snd_ym7128.c  sound.c  sound.h
src/VIDEO/: vid_ati18800.c  vid_ati18800.h  vid_ati28800.c  vid_ati_eeprom.c  vid_ati_mach64.c  vid_ati_mach64.h  vid_bt485_ramdac.c  vid_cga.c  vid_cga.h  vid_cga_comp.c  vid_cl5429.h  vid_cl_gd.c  vid_cl_gd_blit.c  vid_cl_gd_blit.h  vid_colorplus.c  vid_ega.c  vid_ega.h  vid_ega_render.c  vid_ega_render.h  vid_et4000.c  vid_et4000.h  vid_et4000w32.c  vid_et4000w32i.c  vid_genius.c  vid_hercules.c  vid_hercules.h  vid_herculesplus.c  vid_herculesplus.h  vid_ics2595.c  vid_ics2595.h  vid_incolor.c  vid_mda.c  vid_nv_riva128.c  vid_olivetti_m24.h  vid_oti067.c  vid_oti067.h  vid_paradise.c  vid_pc1512.c  vid_pc1640.c  vid_pc200.c  (+23 more)
src/WIN/: 86Box.manifest  86Box.rc  pcap_if.rc  plat_dir.h  plat_dynld.h  plat_iodev.h  plat_midi.h  plat_mouse.h  plat_serial.h  plat_ui.h  resource.h  win.c  win.h  win_cgapal.h  win_crashdump.c  win_d3d-fs.cc  win_d3d-fs.h  win_d3d.cc  win_d3d.h  win_d3d_fs.cc  win_ddraw-fs.cc  win_ddraw-fs.h  win_ddraw-screenshot.cc  win_ddraw.cc  win_ddraw.h  win_ddraw_fs.cc  win_ddraw_screenshot.cc  win_deviceconfig.c  win_dynld.c  win_iodev.c  win_joystick.cc  win_joystickconfig.c  win_keyboard.c  win_language.c  win_language.h  win_midi.c  win_mouse.cc  win_opendir.c  win_serial.c  win_settings.c  (+2 more)
src/build64/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  compile_commands.json
src/cassette/: cassette.c  cassette.h  pzx.c  pzx.h
src/cdrom/: CMakeLists.txt  cdrom.c  cdrom.h  cdrom_aaru.c  cdrom_chd.c  cdrom_dosbox.cpp  cdrom_dosbox.h  cdrom_dosbox.h.ok  cdrom_image.c  cdrom_image.cc  cdrom_image.h  cdrom_image_backend.c  cdrom_image_backend.h  cdrom_image_ccd.c  cdrom_image_viso.c  cdrom_image_writable.c  cdrom_ioctl.c  cdrom_ioctl.h  cdrom_mitsumi.c  cdrom_mke.c  cdrom_null.c  cdrom_null.h
src/char/: CMakeLists.txt  char.c  char_file.c  char_hostfile.c  char_hostser.c  char_loopback.c  char_pipe.c  char_serial.c  char_stdio.c
src/chipset/: 82c100.c  CMakeLists.txt  acc2036.c  acc2168.c  acer_m3a.c  ali1217.c  ali1409.c  ali1429.c  ali1435.c  ali1489.c  ali1531.c  ali1541.c  ali1543.c  ali1621.c  ali6117.c  amd640.c  amd751.c  chipset.h  compaq.c  compaq_386.c  contaq.c  contaq_82c59x.c  cs4031.c  cs8220.c  cs8230.c  cs8230.h  et6000.c  gc100.c  grid1520.c  headland.c  i82335.c  ims8848.c  intel_420ex.c  intel_4x0.c  intel_4x0.c.old  intel_815ep.c  intel_82335.c  intel_gmch.c  intel_i450kx.c  intel_ich2.c  (+68 more)
src/codegen/: CMakeLists.txt  codegen.c  codegen.h  codegen_accumulate.h  codegen_accumulate_x86-64.c  codegen_accumulate_x86.c  codegen_ops.c  codegen_ops.h  codegen_ops_arith.h  codegen_ops_fpu.h  codegen_ops_jump.h  codegen_ops_logic.h  codegen_ops_misc.h  codegen_ops_mmx.h  codegen_ops_mov.h  codegen_ops_shift.h  codegen_ops_stack.h  codegen_ops_x86-64 - Cópia.h  codegen_ops_x86-64.h  codegen_ops_x86.h  codegen_ops_xchg.h  codegen_timing_common.c  codegen_timing_common.h  codegen_timing_pentium.c  codegen_x86-64.c  codegen_x86-64.h  codegen_x86.c  codegen_x86.h  x86_flags.h  x86_ops_call.h  x86seg.c
src/codegen_new/: CMakeLists.txt  codegen.c  codegen.h  codegen_accumulate.c  codegen_accumulate.h  codegen_allocator.c  codegen_allocator.h  codegen_allocator_new.c  codegen_backend.h  codegen_backend_arm.c  codegen_backend_arm.h  codegen_backend_arm64.c  codegen_backend_arm64.h  (+81 more)
(+3367 files in other folders)
